Update branding gallery imagess

--- a/css/about.scss
+++ b/css/about.scss
@@ -150,7 +150,7 @@ body {
             transform: translate(-50%, -50%);
             width: 450px; 
             height: 450px;
-            background-image: url('/assets/Cooperate\ Picture.png');
+            background-image: url('/assets/Cooperate Picture.jpg');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
