--- a/css/home.scss
+++ b/css/home.scss
@@ -158,7 +158,7 @@ body {
 
   .scroll-indicator {
     position: absolute;
-    bottom: $spacing-lg;
+    bottom: 4rem;
     left: 50%;
     transform: translateX(-50%);
     color: $accent-blue;
